[gd_scene load_steps=13 format=3 uid="uid://mbk6s6yg8d7g"]

[ext_resource type="Script" uid="uid://ddpj0a1h52nix" path="res://scripts/Whole game/Choose mode/campaign/campaign_select.gd" id="1_oafh1"]
[ext_resource type="Texture2D" uid="uid://ckd1q4w1tfm04" path="res://assets/images/city.png" id="2_oxcbj"]
[ext_resource type="FontFile" uid="uid://dshtorx4qksxg" path="res://assets/fonts/upheavtt.ttf" id="3_fymsp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rrvjj"]
texture = ExtResource("2_oxcbj")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a344e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a344e"]
bg_color = Color(0.90433, 0.81458, 0.493234, 1)
border_color = Color(0.126192, 0.126192, 0.126191, 1)
border_blend = true
corner_radius_top_left = 123
corner_radius_top_right = 123
corner_radius_bottom_right = 123
corner_radius_bottom_left = 123

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tovcu"]
bg_color = Color(0.829975, 0.73189, 0.374491, 1)
border_color = Color(0.126192, 0.126192, 0.126191, 1)
border_blend = true
corner_radius_top_left = 123
corner_radius_top_right = 123
corner_radius_bottom_right = 123
corner_radius_bottom_left = 123

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0l3vj"]
bg_color = Color(0.874504, 0.778723, 0.433062, 1)
border_color = Color(0.126192, 0.126192, 0.126191, 1)
border_blend = true
corner_radius_top_left = 123
corner_radius_top_right = 123
corner_radius_bottom_right = 123
corner_radius_bottom_left = 123

[sub_resource type="Animation" id="Animation_oxcbj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition1/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition1/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fymsp"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition1/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.933333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition1/ColorRect:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0333333, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_oafh1"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition1/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0666667, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition1/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fymsp"]
_data = {
&"RESET": SubResource("Animation_oxcbj"),
&"fade_in": SubResource("Animation_fymsp"),
&"fade_out": SubResource("Animation_oafh1")
}

[node name="CampaignSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oafh1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_rrvjj")

[node name="Button" type="Button" parent="Background"]
modulate = Color(1, 1, 1, 0.941176)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.111
anchor_top = 0.288
anchor_right = 0.111
anchor_bottom = 0.288
offset_left = -84.872
offset_top = -14.624
offset_right = 50.128
offset_bottom = 120.376
theme_override_colors/font_hover_pressed_color = Color(0.141176, 0.141176, 0.141176, 0.85098)
theme_override_colors/font_hover_color = Color(0.0705882, 0.0705882, 0.0705882, 0.85098)
theme_override_colors/font_color = Color(0, 0, 0, 0.85098)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0.85098)
theme_override_colors/font_pressed_color = Color(0.141176, 0.141176, 0.141176, 0.85098)
theme_override_fonts/font = ExtResource("3_fymsp")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_a344e")
theme_override_styles/hover = SubResource("StyleBoxFlat_a344e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tovcu")
theme_override_styles/normal = SubResource("StyleBoxFlat_0l3vj")
text = "1"

[node name="Button2" type="Button" parent="Background"]
modulate = Color(1, 1, 1, 0.941176)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.111
anchor_top = 0.288
anchor_right = 0.111
anchor_bottom = 0.288
offset_left = 156.128
offset_top = 191.376
offset_right = 291.128
offset_bottom = 326.376
theme_override_colors/font_hover_pressed_color = Color(0.141176, 0.141176, 0.141176, 0.85098)
theme_override_colors/font_hover_color = Color(0.0705882, 0.0705882, 0.0705882, 0.85098)
theme_override_colors/font_color = Color(0, 0, 0, 0.85098)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0.85098)
theme_override_colors/font_pressed_color = Color(0.141176, 0.141176, 0.141176, 0.85098)
theme_override_fonts/font = ExtResource("3_fymsp")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_a344e")
theme_override_styles/hover = SubResource("StyleBoxFlat_a344e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tovcu")
theme_override_styles/normal = SubResource("StyleBoxFlat_0l3vj")
text = "2"

[node name="Button3" type="Button" parent="Background"]
modulate = Color(1, 1, 1, 0.941176)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.111
anchor_top = 0.288
anchor_right = 0.111
anchor_bottom = 0.288
offset_left = 414.128
offset_top = -22.624
offset_right = 549.128
offset_bottom = 112.376
theme_override_colors/font_hover_pressed_color = Color(0.141176, 0.141176, 0.141176, 0.85098)
theme_override_colors/font_hover_color = Color(0.0705882, 0.0705882, 0.0705882, 0.85098)
theme_override_colors/font_color = Color(0, 0, 0, 0.85098)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0.85098)
theme_override_colors/font_pressed_color = Color(0.141176, 0.141176, 0.141176, 0.85098)
theme_override_fonts/font = ExtResource("3_fymsp")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_a344e")
theme_override_styles/hover = SubResource("StyleBoxFlat_a344e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tovcu")
theme_override_styles/normal = SubResource("StyleBoxFlat_0l3vj")
text = "3"

[node name="Button4" type="Button" parent="Background"]
modulate = Color(1, 1, 1, 0.941176)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.111
anchor_top = 0.288
anchor_right = 0.111
anchor_bottom = 0.288
offset_left = 573.128
offset_top = 225.376
offset_right = 708.128
offset_bottom = 360.376
theme_override_colors/font_hover_pressed_color = Color(0.141176, 0.141176, 0.141176, 0.85098)
theme_override_colors/font_hover_color = Color(0.0705882, 0.0705882, 0.0705882, 0.85098)
theme_override_colors/font_color = Color(0, 0, 0, 0.85098)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0.85098)
theme_override_colors/font_pressed_color = Color(0.141176, 0.141176, 0.141176, 0.85098)
theme_override_fonts/font = ExtResource("3_fymsp")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_a344e")
theme_override_styles/hover = SubResource("StyleBoxFlat_a344e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tovcu")
theme_override_styles/normal = SubResource("StyleBoxFlat_0l3vj")
text = "4"

[node name="Button5" type="Button" parent="Background"]
modulate = Color(1, 1, 1, 0.941176)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.111
anchor_top = 0.288
anchor_right = 0.111
anchor_bottom = 0.288
offset_left = 850.128
offset_top = 114.376
offset_right = 985.128
offset_bottom = 249.376
theme_override_colors/font_hover_pressed_color = Color(0.141176, 0.141176, 0.141176, 0.85098)
theme_override_colors/font_hover_color = Color(0.0705882, 0.0705882, 0.0705882, 0.85098)
theme_override_colors/font_color = Color(0, 0, 0, 0.85098)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0.85098)
theme_override_colors/font_pressed_color = Color(0.141176, 0.141176, 0.141176, 0.85098)
theme_override_fonts/font = ExtResource("3_fymsp")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_a344e")
theme_override_styles/hover = SubResource("StyleBoxFlat_a344e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tovcu")
theme_override_styles/normal = SubResource("StyleBoxFlat_0l3vj")
text = "5"

[node name="BackButton" type="Button" parent="Background"]
modulate = Color(1, 1, 1, 0.941176)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.068
anchor_top = 0.11
anchor_right = 0.068
anchor_bottom = 0.11
offset_left = -67.336
offset_top = -67.28
offset_right = 2.66399
offset_bottom = 2.71999
theme_override_colors/font_hover_pressed_color = Color(0.141176, 0.141176, 0.141176, 0.85098)
theme_override_colors/font_hover_color = Color(0.0705882, 0.0705882, 0.0705882, 0.85098)
theme_override_colors/font_color = Color(0, 0, 0, 0.85098)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0.85098)
theme_override_colors/font_pressed_color = Color(0.141176, 0.141176, 0.141176, 0.85098)
theme_override_fonts/font = ExtResource("3_fymsp")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_a344e")
theme_override_styles/hover = SubResource("StyleBoxFlat_a344e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tovcu")
theme_override_styles/normal = SubResource("StyleBoxFlat_0l3vj")
text = "X"

[node name="Transition1" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fymsp")
}

[node name="ColorRect" type="ColorRect" parent="Transition1"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="Background/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Background/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Background/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Background/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Background/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Background/BackButton" to="." method="_on_back_button_pressed"]
